--- a/list.html
+++ b/list.html
@@ -15,175 +15,216 @@
 </head>
 
 <body>
-    <!-- 复用相同的导航栏 -->
-    <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
-        <div class="container">
-            <a class="navbar-brand fw-bold" href="index.html">
-                <i class="bi bi-play-btn-fill me-2"></i>AniWatch
-            </a>
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
+    <div class="wrapper d-flex">
+        <!-- 左侧导航栏 -->
+        <nav class="sidebar bg-dark text-white">
+            <div class="sidebar-header p-3 border-bottom border-secondary">
+                <h4 class="m-0">
+                    <i class="bi bi-play-btn-fill me-2"></i>AniWatch
+                </h4>
+            </div>
+            <div class="sidebar-content">
+                <ul class="nav flex-column">
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">
-                            <i class="bi bi-house me-1"></i>首页
+                            <i class="bi bi-house me-2"></i><span>首页</span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="list.html">
-                            <i class="bi bi-list-ul me-1"></i>动漫列表
+                            <i class="bi bi-list-ul me-2"></i><span>动漫列表</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="list.html?category=tv">
+                            <i class="bi bi-tv me-2"></i><span>TV动画</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="list.html?category=movie">
+                            <i class="bi bi-film me-2"></i><span>剧场动画</span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="detail.html?id=1">
-                            <i class="bi bi-star me-1"></i>热门推荐
+                            <i class="bi bi-star me-2"></i><span>热门推荐</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="login.html">
-                            <i class="bi bi-person me-1"></i>登录
+                        <a class="nav-link" href="list.html?sort=latest">
+                            <i class="bi bi-clock-history me-2"></i><span>最新更新</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="list.html?sort=trending">
+                            <i class="bi bi-fire me-2"></i><span>今日爆火</span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">
-                            <i class="bi bi-info-circle me-1"></i>关于我们
+                            <i class="bi bi-info-circle me-2"></i><span>关于我们</span>
                         </a>
                     </li>
                 </ul>
+            </div>
+        </nav>
 
-                <form class="d-flex ms-3" id="global-search-form" id="global-search-form">
-                    <input class="form-control me-2" type="search" placeholder="搜索动漫..." aria-label="Search" id="global-search-input" id="global-search-input">
-                    <button class="btn btn-outline-light" type="submit">
-                        <i class="bi bi-search"></i>
+        <!-- 侧边栏切换按钮 -->
+        <button class="sidebar-toggle">
+            <i class="bi bi-chevron-left"></i>
+        </button>
+
+        <!-- 主内容区域 -->
+        <div class="main-content flex-grow-1">
+            <!-- 顶部导航栏 -->
+            <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                        <span class="navbar-toggler-icon"></span>
                     </button>
-                </form>
-            </div>
-        </div>
-    </nav>
 
-    <main class="main">
-        <!-- 筛选区域 -->
-        <section class="filters py-4 bg-light">
-            <div class="container">
-                <form class="row g-3 align-items-center" id="search-form">
-                    <div class="col-md-5">
-                        <input type="text" class="form-control form-control-lg" id="search-input"
-                            placeholder="搜索动漫名称...">
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <!-- 搜索框 -->
+                        <form class="d-flex ms-auto me-3" id="global-search-form">
+                            <input class="form-control me-2" type="search" placeholder="搜索动漫..." aria-label="Search" id="global-search-input">
+                            <button class="btn btn-outline-light" type="submit">
+                                <i class="bi bi-search"></i>
+                            </button>
+                        </form>
+                        
+                        <!-- 登录功能 -->
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="login.html">
+                                    <i class="bi bi-person me-1"></i>登录
+                                </a>
+                            </li>
+                        </ul>
                     </div>
+                </div>
+            </nav>
 
-                    <div class="col-md-3">
-                        <select class="form-select form-select-lg" id="category-filter">
-                            <option value="">所有分类</option>
-                            <option value="action">动作</option>
-                            <option value="comedy">喜剧</option>
-                            <option value="drama">剧情</option>
-                            <option value="fantasy">奇幻</option>
-                            <option value="adventure">冒险</option>
-                            <option value="romance">恋爱</option>
-                            <option value="school">校园</option>
-                            <option value="slice of life">日常</option>
-                        </select>
+            <main class="main">
+                <!-- 筛选区域 -->
+                <section class="filters py-4 bg-light">
+                    <div class="container">
+                        <form class="row g-3 align-items-center" id="search-form">
+                            <div class="col-md-5">
+                                <input type="text" class="form-control form-control-lg" id="search-input"
+                                    placeholder="搜索动漫名称...">
+                            </div>
+
+                            <div class="col-md-3">
+                                <select class="form-select form-select-lg" id="category-filter">
+                                    <option value="">所有分类</option>
+                                    <option value="action">动作</option>
+                                    <option value="comedy">喜剧</option>
+                                    <option value="drama">剧情</option>
+                                    <option value="fantasy">奇幻</option>
+                                    <option value="adventure">冒险</option>
+                                    <option value="romance">恋爱</option>
+                                    <option value="school">校园</option>
+                                    <option value="slice of life">日常</option>
+                                </select>
+                            </div>
+
+                            <div class="col-md-2">
+                                <select class="form-select form-select-lg" id="status-filter">
+                                    <option value="">所有状态</option>
+                                    <option value="FINISHED">已完结</option>
+                                    <option value="RELEASING">连载中</option>
+                                    <option value="NOT_YET_RELEASED">未播出</option>
+                                    <option value="CANCELLED">已取消</option>
+                                </select>
+                            </div>
+
+                            <div class="col-md-2">
+                                <button type="submit" class="btn btn-primary btn-lg w-100">
+                                    <i class="bi bi-search me-1"></i>搜索
+                                </button>
+                            </div>
+                        </form>
                     </div>
+                </section>
 
-                    <div class="col-md-2">
-                        <select class="form-select form-select-lg" id="status-filter">
-                            <option value="">所有状态</option>
-                            <option value="FINISHED">已完结</option>
-                            <option value="RELEASING">连载中</option>
-                            <option value="NOT_YET_RELEASED">未播出</option>
-                            <option value="CANCELLED">已取消</option>
-                        </select>
-                    </div>
+                <!-- 动漫列表区域 -->
+                <section class="anime-list-section py-5">
+                    <div class="container">
+                        <h2 class="text-center mb-5 fw-bold">动漫列表</h2>
 
-                    <div class="col-md-2">
-                        <button type="submit" class="btn btn-primary btn-lg w-100">
-                            <i class="bi bi-search me-1"></i>搜索
-                        </button>
-                    </div>
-                </form>
-            </div>
-        </section>
-
-        <!-- 动漫列表区域 -->
-        <section class="anime-list-section py-5">
-            <div class="container">
-                <h2 class="text-center mb-5 fw-bold">动漫列表</h2>
-
-                <div class="row g-4" id="anime-grid">
-                    <!-- 动态渲染区域 -->
-                    <div class="col-12 text-center py-5">
-                        <div class="spinner-border text-primary" role="status">
-                            <span class="visually-hidden">加载中...</span>
+                        <div class="row g-4" id="anime-grid">
+                            <!-- 动态渲染区域 -->
+                            <div class="col-12 text-center py-5">
+                                <div class="spinner-border text-primary" role="status">
+                                    <span class="visually-hidden">加载中...</span>
+                                </div>
+                                <p class="mt-2 text-muted">正在加载动漫数据...</p>
+                            </div>
                         </div>
-                        <p class="mt-2 text-muted">正在加载动漫数据...</p>
+
+                        <!-- 分页 -->
+                        <nav class="mt-5" id="pagination-container">
+                            <ul class="pagination justify-content-center" id="pagination">
+                                <!-- 分页将在这里动态渲染 -->
+                            </ul>
+                        </nav>
+                    </div>
+                </section>
+            </main>
+
+            <!-- 复用相同的底部 -->
+            <footer class="footer py-4 bg-dark text-light">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-4 mb-3">
+                            <h5 class="fw-bold">
+                                <i class="bi bi-play-btn-fill me-2"></i>AniWatch
+                            </h5>
+                            <p class="text-muted">致力于为动漫爱好者提供最好的观看体验</p>
+                        </div>
+
+                        <div class="col-md-2 mb-3">
+                            <h6>快速链接</h6>
+                            <ul class="list-unstyled">
+                                <li><a href="index.html" class="text-decoration-none text-muted">首页</a></li>
+                                <li><a href="list.html" class="text-decoration-none text-muted">动漫列表</a></li>
+                                <li><a href="about.html" class="text-decoration-none text-muted">关于我们</a></li>
+                            </ul>
+                        </div>
+
+                        <div class="col-md-3 mb-3">
+                            <h6>分类</h6>
+                            <ul class="list-unstyled">
+                                <li><a href="list.html?category=action" class="text-decoration-none text-muted">动作</a></li>
+                                <li><a href="list.html?category=comedy" class="text-decoration-none text-muted">喜剧</a></li>
+                                <li><a href="list.html?category=drama" class="text-decoration-none text-muted">剧情</a></li>
+                                <li><a href="list.html?category=fantasy" class="text-decoration-none text-muted">奇幻</a></li>
+                            </ul>
+                        </div>
+
+                        <div class="col-md-3 mb-3">
+                            <h6>联系我们</h6>
+                            <ul class="list-unstyled">
+                                <li class="text-muted">邮箱: contact@aniwatch.com</li>
+                                <li class="text-muted">客服: 400-123-4567</li>
+                            </ul>
+                            <div class="social-links">
+                                <a href="#" class="text-decoration-none text-muted me-2"><i class="bi bi-wechat"></i></a>
+                                <a href="#" class="text-decoration-none text-muted me-2"><i class="bi bi-weibo"></i></a>
+                                <a href="#" class="text-decoration-none text-muted"><i class="bi bi-qq"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <hr class="my-4">
+
+                    <div class="text-center">
+                        <p class="mb-0 text-muted">&copy; 2025 AniWatch 动漫观看网站. All Rights Reserved.</p>
                     </div>
                 </div>
-
-                <!-- 分页 -->
-                <nav class="mt-5" id="pagination-container">
-                    <ul class="pagination justify-content-center" id="pagination">
-                        <!-- 分页将在这里动态渲染 -->
-                    </ul>
-                </nav>
-            </div>
-        </section>
-    </main>
-
-    <!-- 复用相同的底部 -->
-    <footer class="footer py-4 bg-dark text-light">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 mb-3">
-                    <h5 class="fw-bold">
-                        <i class="bi bi-play-btn-fill me-2"></i>AniWatch
-                    </h5>
-                    <p class="text-muted">致力于为动漫爱好者提供最好的观看体验</p>
-                </div>
-
-                <div class="col-md-2 mb-3">
-                    <h6>快速链接</h6>
-                    <ul class="list-unstyled">
-                        <li><a href="index.html" class="text-decoration-none text-muted">首页</a></li>
-                        <li><a href="list.html" class="text-decoration-none text-muted">动漫列表</a></li>
-                        <li><a href="about.html" class="text-decoration-none text-muted">关于我们</a></li>
-                    </ul>
-                </div>
-
-                <div class="col-md-3 mb-3">
-                    <h6>分类</h6>
-                    <ul class="list-unstyled">
-                        <li><a href="list.html?category=action" class="text-decoration-none text-muted">动作</a></li>
-                        <li><a href="list.html?category=comedy" class="text-decoration-none text-muted">喜剧</a></li>
-                        <li><a href="list.html?category=drama" class="text-decoration-none text-muted">剧情</a></li>
-                        <li><a href="list.html?category=fantasy" class="text-decoration-none text-muted">奇幻</a></li>
-                    </ul>
-                </div>
-
-                <div class="col-md-3 mb-3">
-                    <h6>联系我们</h6>
-                    <ul class="list-unstyled">
-                        <li class="text-muted">邮箱: contact@aniwatch.com</li>
-                        <li class="text-muted">客服: 400-123-4567</li>
-                    </ul>
-                    <div class="social-links">
-                        <a href="#" class="text-decoration-none text-muted me-2"><i class="bi bi-wechat"></i></a>
-                        <a href="#" class="text-decoration-none text-muted me-2"><i class="bi bi-weibo"></i></a>
-                        <a href="#" class="text-decoration-none text-muted"><i class="bi bi-qq"></i></a>
-                    </div>
-                </div>
-            </div>
-
-            <hr class="my-4">
-
-            <div class="text-center">
-                <p class="mb-0 text-muted">&copy; 2025 AniWatch 动漫观看网站. All Rights Reserved.</p>
-            </div>
+            </footer>
         </div>
-    </footer>
+    </div>
 
     <!-- Bootstrap 5 JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -192,6 +233,7 @@
     <script src="js/common.js"></script>
     <script src="js/dom.js"></script>
     <script src="js/page/list.js"></script>
+    <script src="js/sidebar.js"></script>
 </body>
 
 </html>
